@@ -447,17 +447,19 @@ namespace json_utils {
     void CheckSubDefinition(JsonResult& result, rapidjson::Value& sub_definition,
                             int index,
                             rapidjson::Document::AllocatorType& alloc) {
-        if (!sub_definition.HasMember("label")) {
-            std::string default_label = ConcatCStrings("GUI ", index);
-            rapidjson::Value n(rapidjson::kStringType);
-            n.SetString(default_label.c_str(), alloc);
-            sub_definition.AddMember("label", n, alloc);
-        }
-        CheckJsonType(result, sub_definition, "label", JsonType::STRING, "", OPTIONAL);
-        CheckJsonType(result, sub_definition, "button", JsonType::STRING, "", OPTIONAL);
         CorrectKey(sub_definition, "window_title", "window_name", alloc);
         CorrectKey(sub_definition, "title", "window_name", alloc);
         CheckJsonType(result, sub_definition, "window_name", JsonType::STRING, "", OPTIONAL);
+
+        if (!sub_definition.HasMember("label")) {
+            std::string default_label = ConcatCStrings("GUI ", index);
+            const char* label = GetString(sub_definition, "window_name", default_label.c_str());
+            rapidjson::Value n(label, alloc);
+            sub_definition.AddMember("label", n, alloc);
+        }
+        CheckJsonType(result, sub_definition, "label", JsonType::STRING);
+
+        CheckJsonType(result, sub_definition, "button", JsonType::STRING, "", OPTIONAL);
 
         CheckJsonType(result, sub_definition, "check_exit_code", JsonType::BOOLEAN, "", OPTIONAL);
         CheckJsonType(result, sub_definition, "exit_success", JsonType::INTEGER, "", OPTIONAL);
