@@ -1,6 +1,7 @@
 - Array brackets can now be omitted when there is only one element.
 - GUI elements can now be defined in root object.
 - GUI labels became optional.
+- "window_name" can now be default values of GUI labels.
 
 ver 0.7.2
 - Added "optional" to ignore some options when a text box is empty.
